fix error response for web APIs
